fixed type overflowing error

--- a/static/css/add_location.css
+++ b/static/css/add_location.css
@@ -36,6 +36,7 @@
 }
 .status_type{
   width: 100%;
+  max-height: 45;
   margin: 0 0 15px 0;
   overflow: hidden;
 }
